[package]
name = "timefuzz"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Fuzzy, natural-language time parsing with confidence scores. Rust core."
repository = "https://github.com/Londopy/timefuzz"

[lib]
name = "timefuzz"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false

[profile.release]
lto = true
